# angel_emailv2

./: .output.txt  CHANGELOG.md  README.md  TODO.md  main.py  pyproject.toml
emails/: emails.csv
src/angel_email/: __init__.py  __main__.py  db.py  email_parser.py  ff_instruct.md  gmail_auth.py  gmail_client.py  ui.py
tests/: test_labeling.py  test_main_flow.py
